@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2554] Feature: Create new Mail class that represents one e-mail
 - [#2311] Change: Move most of countRecords from the testing framework to oelib_db
 - [#2503] Feature: Add DB result and DB query exceptions and wrappers for executing queries
 - [#2542] Change: Remove the Autoloader includes from all oelib non-test classes except for the templatehelper
